syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

// The greeting service definition.
service Greeter {
  // Unary mode
  rpc GetCustomer (CustomerId) returns (Customer);

  // Server streaming mode
  rpc GetAllCustomers (AllCustomersRequest) returns (stream Customer);

  // Client streaming mode
  rpc GetProductsTotalPrice (stream Product) returns (TotalPrice);

  // Bidirectional mode
  rpc GetPriceByProductName (stream ProductName) returns (stream ProductPrice);
}

message AllCustomersRequest{
}

message CustomerId {
  int32 id = 1;
}

message Customer {
  string name = 1;
  int32 age = 2;
  repeated Product products = 3;
}

message Product {
	string name = 1;
	float price = 2;
}

message TotalPrice{
	float totalPrice = 1;
}

message ProductName{
	string name = 1;
}

message ProductPrice {
	float price = 1;
}